fix: restore chat history scrollbar (#1372)
* fix: restore chat history scrollbar by adding missing CSS rules to source file

* fix: use mCustomScrollbar ogame theme for chat history scrollbar

* fix: sync phalanx originFleet colour fix to source CSS file

--- a/public/css/ingame.css
+++ b/public/css/ingame.css
@@ -13956,6 +13956,8 @@ div#buddyCopyOverlay .code {
 /* ***************** Single Chat ******************************************** */
 
 .largeChatContainer { max-height: 500px; overflow: hidden; }
+#chat .largeChatContainer ul.chat { margin: 0; padding: 5px; list-style: none; }
+#chat .largeChatContainer ul.chat .chat_msg:first-child { margin-top: 0; }
 
 .chat_msg .msg_title { width: 270px; }
 
