--- a/resources/css/ingame/469500b3cd5158332fb20a56b14b2c.css
+++ b/resources/css/ingame/469500b3cd5158332fb20a56b14b2c.css
@@ -9892,6 +9892,8 @@ div#buddyCopyOverlay .code {
 /* ***************** Single Chat ******************************************** */
 
 .largeChatContainer { max-height: 500px; overflow: hidden; }
+#chat .largeChatContainer ul.chat { margin: 0; padding: 5px; list-style: none; }
+#chat .largeChatContainer ul.chat .chat_msg:first-child { margin-top: 0; }
 
 .chat_msg .msg_title { width: 270px; }
 
@@ -31041,11 +31043,19 @@ ul.og-paginatable li.active {
 }
 
 #phalanxWrap .eventFleet .descFleet,
-#phalanxWrap .eventFleet .originFleet,
-#phalanxWrap .partnerInfo .descFleet,
-#phalanxWrap .partnerInfo .originFleet {
+#phalanxWrap .partnerInfo .descFleet {
     color:#7c8e9a;
     font-weight:700;
+    text-align:left;
+    width:215px;
+    white-space:nowrap;
+    overflow:hidden;
+}
+
+#phalanxWrap .eventFleet .originFleet,
+#phalanxWrap .partnerInfo .originFleet {
+    color:#fff;
+    font-weight:bold;
     text-align:left;
     width:215px;
     white-space:nowrap;
